# labs

./: .dockerignore  .env  .envrc  .gitignore  .gitignote  .markdownlint.json  .markdownrc  .mdl.rb  .pre-commit-config.yaml  .vale.ini  14.md  CI.md  DOCKER.md  Docker.md  Dockerfile  Jenkinsfile  LAB1.md  LAB10.md  LAB11.md  LAB12.md  LAB13.md  LAB14.md  LAB2.md  LAB3.md  LAB4.md  LAB5.md  LAB6.md  LAB7.MD  LAB7.md  LAB8.md  LAB9.md  LICENSE  LOGGING.md  Lab 11 - K8s secrets and resources.md  Lab 8.md  MARKDOWN.md  METRICS.md  PYTHON.md  README.md  REDAME_GOLANG.md  (+32 more)
K8S/: 11.md  (+5 more)
app_purescript/: .dockerignore  .envrc  .gitignore  Dockerfile  PURESCRIPT.md  README.md  app.env  docker-compose.yml  flake.nix  out.txt  package-lock.json  package.json  packages.dhall  pyproject.toml  spago.dhall
app_purescript/dev/: index.html
app_purescript/scripts/: wait-for-server.py
app_purescript/src/: Main.purs
app_purescript/test/: Main.purs  test_main.py
app_python/: .dockerignore  .env  .env.example  .flake8  .gitignore  .pylintrc  12.md  CI.md  Containerfile  DOCKER.md  Docker.md  Dockerfile  Dockerfile.txt  LICENSE  LICENSE.txt  Makefile  PYTHON.md  Pipfile  README.md  app.env  app.py  app_test.py  app_tests.py  base_tests.py  config.json  config.py  config.yml  config_test.py  conftest.py  db.sqlite3  dependencies.py  docker-compose-base.yml  docker-compose-local.yml  docker-compose-server.yml  docker-compose.yaml  docker-compose.yml  dockerfile  entrypoint.sh  environment.yml  flake.nix  (+46 more)
app_python/.github/: workflows
app_python/.github/workflows/: app_python.yml  docker.yml  main.yml  python.yml  test.yml
app_python/Tests/: test_response.py
app_python/Tests/moscowtime/: test_main_app.py
app_python/ansible/: ANSIBLE.md  ansible.cfg
app_python/ansible/inventory/: default_yandex.yaml
app_python/app/: __init__.py  __main__.py  app.py  main.py  service.py  settings.py  storage.py  test_main.py  urls.py  view.py  wsgi.py
app_python/app/api/: __init__.py
app_python/app/config/: gunicorn.conf.py
app_python/app/core/: config.py
app_python/app/data/: visits.json
app_python/app/lib/: time.py
app_python/app/mocks/: __init__.py  redis.py
app_python/app/models/: status.py
app_python/app/services/: __init__.py  status.py  time.py
app_python/app/templates/: index.html  index.jinja  time.html
app_python/app_folder/: DOCKER.md  Dockerfile  PYTHON.md  app.py  pyproject.toml
app_python/business_logic/: time_logic.py
app_python/config/: ecr_policy.json  prometheus.yml  promtail-conf.yaml
app_python/config/nginx/: .htpasswd  default.conf
app_python/controllers/: time_controller.py
app_python/django_app/: settings.py  tests.py  urls.py  views.py
app_python/docker/: api.Dockerfile  gunicorn_conf.py  watchtower.Dockerfile
app_python/docker/server/: Dockerfile
app_python/docs/: documentation.md
app_python/errors/: __init__.py  invalid_time_zone.py
app_python/files/: config.json  time.txt
app_python/hw1/: manage.py
app_python/hw1/hw1/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
app_python/main_app/: main.py
app_python/monitorig/: LOGGING.md  MONITORING.md  docker-compose.yml  loki.yml  prometheus.yml  promtail.yml
app_python/moscow_time/: Dockerfile  __init__.py  app.py  main.py  saved_visits.json  test_main.py  utils.py
app_python/moscow_time/templates/: index.html  visits.html
app_python/moscow_time/volume/: visits.json  visits.txt
app_python/moscowtime/: main_app.py  manage.py
app_python/moscowtime/moscowtime/: asgi.py  settings.py  urls.py  wsgi.py
app_python/msctime/: app.py  config.py
app_python/msctime/static/: style.css
app_python/msk_time/: app.py
app_python/mysite/: apps.py  views.py
app_python/nginx/: nginx.conf
app_python/requirements/: common.txt  test.txt
app_python/scripts/: activate.sh
app_python/server/: app.py  router.py  utils.py
app_python/src/: __init__.py  app.py  app_test.py  config.py  consts.py  gunicorn.conf.py  test.py  time_app.py  visists.py
app_python/static/: hf.css  main.css  style.css
app_python/superclock/: app.py  metrics.py  project.py  timezone_clock.py
app_python/templates/: Text File.txt  base.html  entry.html  error.html  index.html  main.html  main_page.html.jinja  moscow-time.html  moscow_time.html  template.html  time.html  visits.html
app_python/terraform/: TF.md
app_python/test/: app_test.py  conftest.py  test_msctime.py  unit_test.py
app_python/tests/: __init__.py  app_test.py  base_tests.py  check.sh  conftest.py  main.py  pytest.ini  test.py  test_.py  test_app.py  test_clock_page.py  test_datetime_unittest.py  test_endpoints.py  test_get_request.py  test_get_time.py  test_index_page.py  test_logic.py  test_main.py  test_msk_time_integration.py  test_msk_time_unit.py  test_page.py  test_request.py  test_set_datetime.py  test_set_time.py  test_status_code.py  test_system.py  test_time.py  test_time_logic.py  test_timezone_clock.py  test_views.py  test_web.py  tests_utils.py  time_test.py
app_python/time_app/: app.py
app_python/timeapp/: apps.py  tests.py  urls.py  views.py
app_python/timeweb/: requirements.txt  run.sh  timeweb.py  wsgi.py
app_python/tttime/: app.py  visit_tracker.py
app_python/use_case/: __init__.py  current_time_in_timezone.py
app_python/utils/: consts.py  get_environment.py  main.py
app_python/visitorsapp/: apps.py  urls.py  views.py
app_python/volume/: visits.txt
app_python/web/: Dockerfile  Dockerfile.base  requirements.txt  uwsgi.ini
app_rust/: .dockerignore  CI.md  Cargo.toml  Containerfile  DOCKER.md  Dockerfile  Makefile  README.md  RUST.md  Rocket.toml  docker-compose.yml  visits.json
app_rust/src/: config.rs  lib.rs  log.rs  main.rs  utils.rs  visits.rs
app_rust/templates/: index.html.tera
lab1/: PYTHON.md  README.md  pyproject.toml
lab1/app_go/: GO.md  go.mod  main_test.go
lab1/app_python/: .env.example  DOCKER.md  Dockerfile  Makefile  PYTHON.md  README.md  app.py  docker-compose.yml  pyproject.toml  test_.py
lab1/app_rust/: .gitignore  Cargo.toml  README.md  RUST.md  docker-compose.yml
(+2074 files in other folders)
