[tool.poetry]
name = "devops-labs"
version = "0.0.1"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pylint = "^2.15.3"
manage-fastapi = "^1.1.1"
black = "^22.8.0"
djlint = "^1.17.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
