[tool.poetry]
name = "devops-labs"
version = "0.0.1"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
yandexcloud = "^0.186.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pylint = "^2.15.3"
manage-fastapi = "^1.1.1"
black = "^22.8.0"
djlint = "^1.17.1"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
Jinja2 = "^3.1.2"
click = "^8.1.3"
bs4 = "^0.0.1"
pytest = "<7.0.0"
pytest-selenium = "^4.0.0"
selenium = "^4.5.0"
pytest-base-url = "^2.0.0"
requests = "^2.28.1"
protobuf = "<3.21"
ansible = "^6.5.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable="""
    missing-function-docstring,
    missing-module-docstring
"""