[tool.poetry]
name = "moscow-time-app"
version = "0.1.0"
description = ""
authors = ["Abuzyar Tazetdinov <tazetdinov9925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
pytz = "^2022.2.1"
prometheus-client = "^0.14.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
types-pytz = "^2022.2.1"
pytest-aiohttp = "^1.0.4"
pytest = "^7.1.3"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
