[tool.poetry]
name = "currenttime"
version = "0.1.0"
description = ""
authors = ["Lymarenko Lev <lymarenko.lev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
pytz = "^2022.2.1"
gunicorn = "^20.1.0"
prometheus-flask-exporter = "^0.20.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.3"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
