[package]
name = "currenttime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
chrono-tz = "0.6.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rocket_prometheus = "0.10.0-rc.3"
serde_json = "1.0"
serde = "1.0"
serde_with = "2.1"
anyhow = "1"